--- a/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
+++ b/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
@@ -22,11 +22,18 @@
                                     <constraint firstAttribute="width" constant="228" id="xH0-dO-bf7"/>
                                 </constraints>
                             </imageView>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z40-ep-IAt">
+                                <rect key="frame" x="73.5" y="396" width="228" height="228"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="228" id="2ev-Ey-WzH"/>
+                                    <constraint firstAttribute="width" constant="228" id="Cnt-JT-PXf"/>
+                                </constraints>
+                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yKU-ZI-eFU">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="7" translatesAutoresizingMaskIntoConstraints="NO" id="DZi-wJ-KhH">
-                                <rect key="frame" x="121.5" y="106" width="132" height="178"/>
+                                <rect key="frame" x="154.5" y="106" width="66" height="89"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IS BLA BLA BLA" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQf-he-UpW">
                                 <rect key="frame" x="80" y="67" width="215" height="23"/>
@@ -35,14 +42,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Left swirls" translatesAutoresizingMaskIntoConstraints="NO" id="re6-pP-niI">
-                                <rect key="frame" x="51.5" y="132" width="52" height="46"/>
+                                <rect key="frame" x="84.5" y="132" width="52" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="gqM-kl-ptB"/>
                                     <constraint firstAttribute="width" constant="52" id="o52-2v-GOw"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nob-E1-1Ok">
-                                <rect key="frame" x="162" y="299" width="51.5" height="19"/>
+                                <rect key="frame" x="162" y="210" width="51.5" height="19"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="19" id="cnt-IZ-PWV"/>
                                 </constraints>
@@ -62,14 +69,14 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Right swirls" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-6o-bf1">
-                                <rect key="frame" x="270.5" y="132" width="52" height="46"/>
+                                <rect key="frame" x="237.5" y="132" width="52" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="52" id="azV-af-VIH"/>
                                     <constraint firstAttribute="height" constant="46" id="q9q-fI-IgW"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ph0-tE-Hzg">
-                                <rect key="frame" x="107.5" y="246" width="160" height="40"/>
+                                <rect key="frame" x="107.49999999999999" y="246" width="160.00000000000003" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="Mjb-pn-ElO"/>
                                     <constraint firstAttribute="height" constant="40" id="Odv-0C-KAJ"/>
@@ -83,7 +90,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xek-CQ-2nw">
-                                <rect key="frame" x="249" y="336" width="36" height="36"/>
+                                <rect key="frame" x="249" y="335" width="36" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="cXy-im-9zO"/>
                                     <constraint firstAttribute="width" constant="36" id="jHt-Od-heR"/>
@@ -94,10 +101,10 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Kjg-ke-cAy">
-                                <rect key="frame" x="20" y="629" width="335" height="22"/>
+                                <rect key="frame" x="22" y="629" width="331" height="22"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="companyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="sBZ-QZ-gSm">
-                                        <rect key="frame" x="110.5" y="0.0" width="114" height="22"/>
+                                        <rect key="frame" x="137" y="0.0" width="57" height="22"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -109,7 +116,8 @@
                         <constraints>
                             <constraint firstItem="ERi-oy-g2q" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="22" id="5Kg-wz-oKY"/>
                             <constraint firstItem="LQf-he-UpW" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="80" id="5ca-0b-nEe"/>
-                            <constraint firstItem="Kjg-ke-cAy" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="20" id="7ue-Ym-nBB"/>
+                            <constraint firstItem="Kjg-ke-cAy" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="22" id="7ue-Ym-nBB"/>
+                            <constraint firstItem="Z40-ep-IAt" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="8Uv-dA-YLw"/>
                             <constraint firstItem="nob-E1-1Ok" firstAttribute="top" secondItem="DZi-wJ-KhH" secondAttribute="bottom" constant="15" id="B8W-LI-QVa"/>
                             <constraint firstItem="nob-E1-1Ok" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="Hfd-2v-BDH"/>
                             <constraint firstAttribute="bottom" secondItem="yKU-ZI-eFU" secondAttribute="bottom" id="JcN-kI-wGL"/>
@@ -118,6 +126,7 @@
                             <constraint firstItem="ph0-tE-Hzg" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="246" id="Pm3-vi-vP2"/>
                             <constraint firstItem="DZi-wJ-KhH" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="QSU-Ow-TIo"/>
                             <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="Xek-CQ-2nw" secondAttribute="trailing" constant="90" id="SSg-qN-HiV"/>
+                            <constraint firstItem="Z40-ep-IAt" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="110" id="VG7-FZ-hLk"/>
                             <constraint firstItem="QiA-6o-bf1" firstAttribute="leading" secondItem="DZi-wJ-KhH" secondAttribute="trailing" constant="17" id="Vmt-Gy-0Ph"/>
                             <constraint firstItem="DZi-wJ-KhH" firstAttribute="leading" secondItem="re6-pP-niI" secondAttribute="trailing" constant="18" id="WdA-iC-wgg"/>
                             <constraint firstItem="DZi-wJ-KhH" firstAttribute="top" secondItem="LQf-he-UpW" secondAttribute="bottom" constant="16" id="XiG-Yh-L0h"/>
@@ -126,8 +135,8 @@
                             <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="LQf-he-UpW" secondAttribute="trailing" constant="80" id="fcJ-uV-eH9"/>
                             <constraint firstItem="yKU-ZI-eFU" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" id="hmS-4C-piL"/>
                             <constraint firstItem="sL2-2Z-VuB" firstAttribute="bottom" secondItem="Kjg-ke-cAy" secondAttribute="bottom" constant="16" id="kvf-r6-GQ1"/>
-                            <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="Kjg-ke-cAy" secondAttribute="trailing" constant="20" id="m32-sN-IeG"/>
-                            <constraint firstItem="Xek-CQ-2nw" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="50" id="o1v-0J-IIv"/>
+                            <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="Kjg-ke-cAy" secondAttribute="trailing" constant="22" id="m32-sN-IeG"/>
+                            <constraint firstItem="Xek-CQ-2nw" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="49" id="o1v-0J-IIv"/>
                             <constraint firstItem="h5o-6R-cCx" firstAttribute="top" secondItem="sL2-2Z-VuB" secondAttribute="top" constant="17" id="oWJ-ct-lNO"/>
                             <constraint firstItem="ERi-oy-g2q" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="qVY-lb-3jZ"/>
                             <constraint firstItem="ph0-tE-Hzg" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="sSE-ap-Th2"/>
@@ -141,8 +150,11 @@
                         <outlet property="babeNameLabel" destination="LQf-he-UpW" id="7yH-Tj-rMy"/>
                         <outlet property="backgroundImageView" destination="yKU-ZI-eFU" id="Fw1-7g-oFk"/>
                         <outlet property="closeButton" destination="h5o-6R-cCx" id="brD-1H-dbP"/>
+                        <outlet property="cyrcelmageView" destination="Z40-ep-IAt" id="tBh-ZC-BZk"/>
                         <outlet property="logoStackView" destination="Kjg-ke-cAy" id="tAV-Sa-gbJ"/>
                         <outlet property="numberImageView" destination="DZi-wJ-KhH" id="UbG-LL-neQ"/>
+                        <outlet property="originYcameraImageView" destination="o1v-0J-IIv" id="Smj-6B-W8b"/>
+                        <outlet property="originYphotoImageView" destination="5Kg-wz-oKY" id="Q2A-Yc-0wf"/>
                         <outlet property="photoButton" destination="Xek-CQ-2nw" id="Xul-ta-cLl"/>
                         <outlet property="photoImageView" destination="ERi-oy-g2q" id="0pv-ND-BpM"/>
                         <outlet property="shareButton" destination="ph0-tE-Hzg" id="N5a-00-teZ"/>
