--- a/BabyBirthday/BabyBirthday/ViewControllers/WelcomeViewController/Base.lproj/WelcomeViewController.storyboard
+++ b/BabyBirthday/BabyBirthday/ViewControllers/WelcomeViewController/Base.lproj/WelcomeViewController.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="dark"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,25 +26,17 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Baby name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yZz-Kp-Rag">
-                                <rect key="frame" x="20" y="70" width="134.5" height="21"/>
+                                <rect key="frame" x="20" y="70" width="134" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose date birthday:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wEo-ID-2PX">
-                                <rect key="frame" x="20" y="159" width="170" height="21"/>
+                                <rect key="frame" x="20" y="159" width="169" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Birthday" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m8a-8j-zFZ">
-                                <rect key="frame" x="20" y="184" width="728" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="K49-qE-FAV"/>
-                                </connections>
-                            </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="companyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="ad4-Zh-HkX">
                                 <rect key="frame" x="355.5" y="20" width="57" height="20"/>
                             </imageView>
@@ -52,21 +46,22 @@
                                     <constraint firstAttribute="height" constant="30" id="mci-zn-Ch8"/>
                                 </constraints>
                                 <state key="normal" title="Show birthday screen">
-                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <color key="titleColor" systemColor="darkTextColor"/>
                                 </state>
                                 <connections>
                                     <action selector="showBirthdayTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="4bA-EP-PGe"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Placeholder_camera_blue" translatesAutoresizingMaskIntoConstraints="NO" id="xcA-H4-0TH">
-                                <rect key="frame" x="249" y="248" width="270" height="270"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Placeholder_camera_blue" translatesAutoresizingMaskIntoConstraints="NO" id="xcA-H4-0TH">
+                                <rect key="frame" x="249" y="430" width="270" height="270"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="270" id="We4-5a-kII"/>
                                     <constraint firstAttribute="width" constant="270" id="mJr-Ho-D7K"/>
                                 </constraints>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ejM-N5-FRW">
-                                <rect key="frame" x="366" y="528" width="36" height="36"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ejM-N5-FRW">
+                                <rect key="frame" x="366" y="710" width="36" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="nzp-Xw-hEx"/>
                                     <constraint firstAttribute="width" constant="36" id="wTV-kp-6sE"/>
@@ -76,23 +71,29 @@
                                     <action selector="makePhotoTappedWithButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FZh-ng-yHK"/>
                                 </connections>
                             </button>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="HUX-Mb-fDQ">
+                                <rect key="frame" x="20" y="184" width="320" height="216"/>
+                                <connections>
+                                    <action selector="dateChangedWithDatePicker:" destination="BYZ-38-t0r" eventType="valueChanged" id="kj4-lH-pi4"/>
+                                </connections>
+                            </datePicker>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="wEo-ID-2PX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="4YN-ug-8YA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="za9-An-87k" secondAttribute="bottom" constant="10" id="8Db-bh-C6N"/>
                             <constraint firstItem="ZIl-dE-lGH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="CQc-S7-HLJ"/>
+                            <constraint firstItem="HUX-Mb-fDQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="GNv-0b-jNh"/>
                             <constraint firstItem="wEo-ID-2PX" firstAttribute="top" secondItem="ZIl-dE-lGH" secondAttribute="bottom" constant="30" id="HXr-Ml-Xaa"/>
                             <constraint firstItem="ad4-Zh-HkX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="INI-aW-FmE"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="m8a-8j-zFZ" secondAttribute="trailing" constant="20" id="VsD-75-SPE"/>
-                            <constraint firstItem="m8a-8j-zFZ" firstAttribute="top" secondItem="wEo-ID-2PX" secondAttribute="bottom" constant="4" id="Yxy-8k-kuw"/>
                             <constraint firstItem="yZz-Kp-Rag" firstAttribute="top" secondItem="ad4-Zh-HkX" secondAttribute="bottom" constant="30" id="aqq-fA-LDz"/>
+                            <constraint firstItem="xcA-H4-0TH" firstAttribute="top" secondItem="HUX-Mb-fDQ" secondAttribute="bottom" constant="30" id="bKO-Jo-bCz"/>
                             <constraint firstItem="ZIl-dE-lGH" firstAttribute="top" secondItem="yZz-Kp-Rag" secondAttribute="bottom" constant="4" id="bOa-Lx-1Aq"/>
-                            <constraint firstItem="xcA-H4-0TH" firstAttribute="top" secondItem="m8a-8j-zFZ" secondAttribute="bottom" constant="30" id="bPJ-fk-toD"/>
                             <constraint firstItem="ejM-N5-FRW" firstAttribute="top" secondItem="xcA-H4-0TH" secondAttribute="bottom" constant="10" id="cKe-PF-1AT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="za9-An-87k" secondAttribute="trailing" constant="20" id="deA-32-oTE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="wEo-ID-2PX" secondAttribute="trailing" symbolic="YES" id="fRg-gj-okQ"/>
-                            <constraint firstItem="m8a-8j-zFZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="hLI-ey-ltA"/>
+                            <constraint firstItem="HUX-Mb-fDQ" firstAttribute="top" secondItem="wEo-ID-2PX" secondAttribute="bottom" constant="4" id="gYl-Oq-3ye"/>
                             <constraint firstItem="ejM-N5-FRW" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jSM-sJ-J9H"/>
                             <constraint firstItem="za9-An-87k" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="s5H-fj-ip0"/>
                             <constraint firstItem="xcA-H4-0TH" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="s6P-8T-ofo"/>
@@ -102,11 +103,10 @@
                             <constraint firstItem="yZz-Kp-Rag" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="uax-Ih-XTF"/>
                             <constraint firstItem="ad4-Zh-HkX" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="x1f-mo-RCN"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="birhdayTextField" destination="m8a-8j-zFZ" id="8hx-Ag-BCB"/>
                         <outlet property="cameraButton" destination="ejM-N5-FRW" id="P3N-Ft-IQ6"/>
+                        <outlet property="datePicker" destination="HUX-Mb-fDQ" id="09Q-B5-JaB"/>
                         <outlet property="imagePhotoView" destination="xcA-H4-0TH" id="jG6-pU-cYm"/>
                         <outlet property="nameTextField" destination="ZIl-dE-lGH" id="GMR-Cq-QQ8"/>
                         <outlet property="showBirtdayButton" destination="za9-An-87k" id="Re1-gu-WN3"/>
@@ -121,5 +121,11 @@
         <image name="Camera_icon_blue" width="36" height="36"/>
         <image name="Placeholder_camera_blue" width="270" height="270"/>
         <image name="companyIcon" width="57" height="20"/>
+        <systemColor name="darkTextColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
