--- a/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
+++ b/BabyBirthday/BabyBirthday/ViewControllers/BirthdayViewController/BirthdayViewController.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kmf-Yi-DZW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kmf-Yi-DZW">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,21 +17,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ERi-oy-g2q">
-                                <rect key="frame" x="73.5" y="308" width="228" height="228"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="228" id="Qfb-qe-kR0"/>
-                                    <constraint firstAttribute="width" constant="228" id="xH0-dO-bf7"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ERi-oy-g2q">
+                                <rect key="frame" x="80.5" y="315" width="214" height="214"/>
                             </imageView>
-                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z40-ep-IAt">
-                                <rect key="frame" x="73.5" y="396" width="228" height="228"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z40-ep-IAt">
+                                <rect key="frame" x="73.5" y="308" width="228" height="228"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="228" id="2ev-Ey-WzH"/>
                                     <constraint firstAttribute="width" constant="228" id="Cnt-JT-PXf"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yKU-ZI-eFU">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yKU-ZI-eFU">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="7" translatesAutoresizingMaskIntoConstraints="NO" id="DZi-wJ-KhH">
@@ -57,7 +55,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5o-6R-cCx">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5o-6R-cCx">
                                 <rect key="frame" x="17" y="17" width="14" height="14"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="14" id="7G5-Nr-SYO"/>
@@ -75,8 +73,19 @@
                                     <constraint firstAttribute="height" constant="46" id="q9q-fI-IgW"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xek-CQ-2nw">
+                                <rect key="frame" x="250.5" y="333" width="36" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="cXy-im-9zO"/>
+                                    <constraint firstAttribute="width" constant="36" id="jHt-Od-heR"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="Camera_icon_blue"/>
+                                <connections>
+                                    <action selector="makePhotoTappedWithButton:" destination="kmf-Yi-DZW" eventType="touchUpInside" id="82e-iC-poq"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ph0-tE-Hzg">
-                                <rect key="frame" x="107.49999999999999" y="246" width="160.00000000000003" height="40"/>
+                                <rect key="frame" x="107.5" y="246" width="160" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="Mjb-pn-ElO"/>
                                     <constraint firstAttribute="height" constant="40" id="Odv-0C-KAJ"/>
@@ -87,17 +96,6 @@
                                 </state>
                                 <connections>
                                     <action selector="shareTapped" destination="kmf-Yi-DZW" eventType="touchUpInside" id="Xha-wE-7Le"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xek-CQ-2nw">
-                                <rect key="frame" x="249" y="335" width="36" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="cXy-im-9zO"/>
-                                    <constraint firstAttribute="width" constant="36" id="jHt-Od-heR"/>
-                                </constraints>
-                                <state key="normal" backgroundImage="Camera_icon_blue"/>
-                                <connections>
-                                    <action selector="makePhotoTappedWithButton:" destination="kmf-Yi-DZW" eventType="touchUpInside" id="82e-iC-poq"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Kjg-ke-cAy">
@@ -112,38 +110,40 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="sL2-2Z-VuB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ERi-oy-g2q" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="22" id="5Kg-wz-oKY"/>
                             <constraint firstItem="LQf-he-UpW" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="80" id="5ca-0b-nEe"/>
                             <constraint firstItem="Kjg-ke-cAy" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="22" id="7ue-Ym-nBB"/>
                             <constraint firstItem="Z40-ep-IAt" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="8Uv-dA-YLw"/>
                             <constraint firstItem="nob-E1-1Ok" firstAttribute="top" secondItem="DZi-wJ-KhH" secondAttribute="bottom" constant="15" id="B8W-LI-QVa"/>
                             <constraint firstItem="nob-E1-1Ok" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="Hfd-2v-BDH"/>
                             <constraint firstAttribute="bottom" secondItem="yKU-ZI-eFU" secondAttribute="bottom" id="JcN-kI-wGL"/>
-                            <constraint firstItem="re6-pP-niI" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="132" id="LuL-xE-v4d"/>
+                            <constraint firstItem="re6-pP-niI" firstAttribute="top" secondItem="sL2-2Z-VuB" secondAttribute="top" constant="132" id="LuL-xE-v4d"/>
+                            <constraint firstItem="ERi-oy-g2q" firstAttribute="leading" secondItem="Z40-ep-IAt" secondAttribute="leading" constant="7" id="NAg-BT-hOm"/>
                             <constraint firstItem="yKU-ZI-eFU" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" id="PA7-FV-7JC"/>
-                            <constraint firstItem="ph0-tE-Hzg" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="246" id="Pm3-vi-vP2"/>
+                            <constraint firstItem="ph0-tE-Hzg" firstAttribute="top" secondItem="sL2-2Z-VuB" secondAttribute="top" constant="246" id="Pm3-vi-vP2"/>
                             <constraint firstItem="DZi-wJ-KhH" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="QSU-Ow-TIo"/>
-                            <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="Xek-CQ-2nw" secondAttribute="trailing" constant="90" id="SSg-qN-HiV"/>
-                            <constraint firstItem="Z40-ep-IAt" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="110" id="VG7-FZ-hLk"/>
+                            <constraint firstItem="ERi-oy-g2q" firstAttribute="bottom" secondItem="Z40-ep-IAt" secondAttribute="bottom" constant="-7" id="RmA-86-yfl"/>
+                            <constraint firstItem="ERi-oy-g2q" firstAttribute="trailing" secondItem="Z40-ep-IAt" secondAttribute="trailing" constant="-7" id="Ugh-cJ-EGF"/>
+                            <constraint firstItem="Z40-ep-IAt" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="22" id="VG7-FZ-hLk"/>
                             <constraint firstItem="QiA-6o-bf1" firstAttribute="leading" secondItem="DZi-wJ-KhH" secondAttribute="trailing" constant="17" id="Vmt-Gy-0Ph"/>
                             <constraint firstItem="DZi-wJ-KhH" firstAttribute="leading" secondItem="re6-pP-niI" secondAttribute="trailing" constant="18" id="WdA-iC-wgg"/>
                             <constraint firstItem="DZi-wJ-KhH" firstAttribute="top" secondItem="LQf-he-UpW" secondAttribute="bottom" constant="16" id="XiG-Yh-L0h"/>
-                            <constraint firstItem="QiA-6o-bf1" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="132" id="Zfd-TO-zQU"/>
-                            <constraint firstItem="DZi-wJ-KhH" firstAttribute="top" secondItem="iLX-pV-Rkv" secondAttribute="top" constant="106" id="dK6-pI-96I"/>
+                            <constraint firstItem="QiA-6o-bf1" firstAttribute="top" secondItem="sL2-2Z-VuB" secondAttribute="top" constant="132" id="Zfd-TO-zQU"/>
+                            <constraint firstItem="Xek-CQ-2nw" firstAttribute="top" secondItem="Z40-ep-IAt" secondAttribute="top" constant="25" id="ab6-Pc-uah"/>
+                            <constraint firstItem="DZi-wJ-KhH" firstAttribute="top" secondItem="sL2-2Z-VuB" secondAttribute="top" constant="106" id="dK6-pI-96I"/>
                             <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="LQf-he-UpW" secondAttribute="trailing" constant="80" id="fcJ-uV-eH9"/>
                             <constraint firstItem="yKU-ZI-eFU" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" id="hmS-4C-piL"/>
                             <constraint firstItem="sL2-2Z-VuB" firstAttribute="bottom" secondItem="Kjg-ke-cAy" secondAttribute="bottom" constant="16" id="kvf-r6-GQ1"/>
                             <constraint firstItem="sL2-2Z-VuB" firstAttribute="trailing" secondItem="Kjg-ke-cAy" secondAttribute="trailing" constant="22" id="m32-sN-IeG"/>
-                            <constraint firstItem="Xek-CQ-2nw" firstAttribute="top" secondItem="ph0-tE-Hzg" secondAttribute="bottom" constant="49" id="o1v-0J-IIv"/>
+                            <constraint firstItem="ERi-oy-g2q" firstAttribute="top" secondItem="Z40-ep-IAt" secondAttribute="top" constant="7" id="nAS-50-21p"/>
                             <constraint firstItem="h5o-6R-cCx" firstAttribute="top" secondItem="sL2-2Z-VuB" secondAttribute="top" constant="17" id="oWJ-ct-lNO"/>
-                            <constraint firstItem="ERi-oy-g2q" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="qVY-lb-3jZ"/>
                             <constraint firstItem="ph0-tE-Hzg" firstAttribute="centerX" secondItem="yKU-ZI-eFU" secondAttribute="centerX" id="sSE-ap-Th2"/>
                             <constraint firstItem="yKU-ZI-eFU" firstAttribute="trailing" secondItem="sL2-2Z-VuB" secondAttribute="trailing" id="uYT-L4-Csw"/>
+                            <constraint firstItem="Xek-CQ-2nw" firstAttribute="trailing" secondItem="Z40-ep-IAt" secondAttribute="trailing" constant="-15" id="wXN-CC-vpt"/>
                             <constraint firstItem="h5o-6R-cCx" firstAttribute="leading" secondItem="sL2-2Z-VuB" secondAttribute="leading" constant="17" id="wnW-Ys-RkZ"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="sL2-2Z-VuB"/>
                     </view>
                     <connections>
                         <outlet property="babeAgeLabel" destination="nob-E1-1Ok" id="1kc-hS-SwP"/>
@@ -153,8 +153,6 @@
                         <outlet property="cyrcelmageView" destination="Z40-ep-IAt" id="tBh-ZC-BZk"/>
                         <outlet property="logoStackView" destination="Kjg-ke-cAy" id="tAV-Sa-gbJ"/>
                         <outlet property="numberImageView" destination="DZi-wJ-KhH" id="UbG-LL-neQ"/>
-                        <outlet property="originYcameraImageView" destination="o1v-0J-IIv" id="Smj-6B-W8b"/>
-                        <outlet property="originYphotoImageView" destination="5Kg-wz-oKY" id="Q2A-Yc-0wf"/>
                         <outlet property="photoButton" destination="Xek-CQ-2nw" id="Xul-ta-cLl"/>
                         <outlet property="photoImageView" destination="ERi-oy-g2q" id="0pv-ND-BpM"/>
                         <outlet property="shareButton" destination="ph0-tE-Hzg" id="N5a-00-teZ"/>
@@ -174,5 +172,8 @@
         <image name="btn_close" width="14" height="14"/>
         <image name="companyIcon" width="57" height="20"/>
         <image name="ic_share_pink_small" width="20" height="16"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
